Приложение с листингом блочков по учебным предметам.

--- a/template/main.html
+++ b/template/main.html
@@ -1,6 +1,7 @@
 ﻿<div class="container-fluid" ng-controller='SubjCtrl as vm'>
     <section>
         <div class="l-container-4">
+            <h1 class="u-text-center">Курсы</h1>
             <div class="courses u-mt-30">
                 <form class="courses-form form" id="filterform" role="form">
                     <div>
